--- a/src/index.html
+++ b/src/index.html
@@ -362,6 +362,7 @@
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
   <script type="text/javascript">
     $('.multiple-items').slick({
+    autoplay: true,
     infinite: true,
     slidesToShow: 2,
     slidesToScroll: 2,
