--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
         <div class="main-nav">
+          <a href="#main">Home</a>
           <a href="#order">Order</a>
           <a href="#booking">Booking</a>
         </div>
