--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,10 @@
           <h1 class="logo__title"><span>Mamma</span>Mia!</h1>
           <h2 class="logo__subtitle">the best homemade Italian food</h2>
         </div>
-        <div class="main-nav">
-          <a href="#main">Home</a>
-          <a href="#order">Order</a>
-          <a href="#booking">Booking</a>
+        <div class="main-nav ">
+          <a  class="click" href="#main">Home</a>
+          <a class="click" href="#order">Order</a>
+          <a class="click" href="#booking">Booking</a>
         </div>
         <div id="cart" class="cart">
           <div class="cart__summary">
@@ -69,14 +69,14 @@
       <div class="main-wrapper">     
        <div class="container ">
         <div class="row button">
-          <div class="col">
-            <button type="image" href="#order" class="main left">
+          <div class="col ">
+            <button type="image" href="#order" class="main left click">
               <h2>ORDER ONLINE</h2>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </button>
           </div>
           <div class="col">
-            <button type="image" href="#booking" class="main right">
+            <button type="image" href="#booking" class="main right click">
               <h2>BOOK A TABLE</h2>
               <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
             </button>
